[tool.poetry]
name = "kd_slug"
version = "0.1.0"
description = ""
authors = ["deepio"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
sphinx = "^3.1.0"
m2r = {git = "https://github.com/crossnox/m2r", rev = "dev"}
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
